RESOLVED FIXED44105
Web Inspector: Crash in addTimelineRecord
https://bugs.webkit.org/show_bug.cgi?id=44105
Summary Web Inspector: Crash in addTimelineRecord
Kelly Norton
Reported 2010-08-17 06:00:26 PDT
If the timeline is enabled through WebDevToolsAgentImpl::setApuEnabled, a remote frontend is not created. This results in a crash later when addTimelineRecord attempts to send the first record to the frontend.
Attachments
Create a frontend in setApuEnabled if there isn't one. (1.28 KB, patch)
2010-08-17 06:08 PDT, Kelly Norton
no flags
Kelly Norton
Comment 1 2010-08-17 06:08:02 PDT
Created attachment 64577 [details] Create a frontend in setApuEnabled if there isn't one.
WebKit Commit Bot
Comment 2 2010-08-17 09:28:07 PDT
Comment on attachment 64577 [details] Create a frontend in setApuEnabled if there isn't one. Clearing flags on attachment: 64577 Committed r65510: <http://trac.webkit.org/changeset/65510>
WebKit Commit Bot
Comment 3 2010-08-17 09:28:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.