2010-08-17  Kelly Norton  <knorton@google.com>

Reviewed by Pavel Feldman.

        Web Inspector: Fixes a crash in addTimelineRecord when InspectorTimelineAgent
        is enabled through WebDevToolsAgentImpl::setApuEnabled.
        https://bugs.webkit.org/show_bug.cgi?id=44105

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::WebDevToolsAgentImpl::setApuAgentEnabled):

Canonical link: https://commits.webkit.org/56310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65510 268f45cc-cd09-0410-ab3c-d52691b4dbfc